fixed some 1.8 / 1.7 quirks